# LuxCore

./: .gitattributes  .gitignore  .hgignore  .travis.yml  AUTHORS.txt  CMakeCache.txt  CMakeLists.txt  ChangeLog.txt  Configuration.cmake  GNUmakefile  README.md  README.txt  TODO.txt  azure-pipelines.yml  ccache.conf  conanfile.py  debug_wheels.bat  debug_wheels.sh  luxcore.ini  luxcore.json  make.bat  make.ps1  osx_locals.map  pyproject.toml  release-notes.txt  release-pipeline.yml
samples/benchpixel/: CMakeLists.txt  benchpixel.cpp
samples/luxcoreconsole/: CMakeLists.txt  luxcoreconsole.cpp
samples/luxcoreui/: CMakeLists.txt  acceleratorwindow.cpp  acceleratorwindow.h  bake.cpp  epsilonwindow.cpp  epsilonwindow.h  fileext.h  filmchannelswindow.cpp  filmchannelswindow.h  filmoutputswindow.cpp  filmoutputswindow.h  filmradiancegroupswindow.cpp  filmradiancegroupswindow.h  haltconditionswindow.cpp  haltconditionswindow.h  helpwindow.cpp  helpwindow.h  imagewindow.cpp  imagewindow.h  imgui_impl_glfw.h  importancewindow.cpp  importancewindow.h  lightstrategywindow.cpp  lightstrategywindow.h  logwindow.cpp  logwindow.h  luxcoreapp.cpp  luxcoreapp.h  luxcoreui.cpp  objecteditorwindow.cpp  objecteditorwindow.h  objectwindow.cpp  objectwindow.h  ocldevicewindow.cpp  ocldevicewindow.h  pixelfilterwindow.cpp  pixelfilterwindow.h  renderenginewindow.cpp  renderenginewindow.h  samplerwindow.cpp  (+8 more)
samples/luxmark/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  hardwaretree.cpp  hardwaretree.h  luxmarkapp.cpp  luxmarkapp.h  luxmarkcfg.h  luxmarkcfg.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_aboutdialog.cxx  moc_hardwaretree.cxx  moc_luxmarkapp.cxx  moc_mainwindow.cxx  moc_resultdialog.cxx  moc_submitdialog.cxx  qrc_resources.cxx  renderconfig.cpp  renderconfig.h  renderengine.h  resources.pro  resources.qrc  resultdialog.cpp  resultdialog.h  resultdialog.ui  slgdefs.h  slgscene.cpp  slgscene.h  smalllux.h  submitdialog.cpp  submitdialog.h  submitdialog.ui  ui_aboutdialog.h  ui_mainwindow.h  ui_resultdialog.h  ui_submitdialog.h  (+1 more)
samples/smallluxgpu/: CMakeLists.txt  camera.h  displayfunc.cpp  displayfunc.h  film.h  hashgrid.cpp  hitpoints.cpp  hitpoints.h  hybridhashgrid.cpp  kdtree.cpp  light.cpp  light.h  lookupaccel.h  material.h  mc.h  path.cpp  path.h  renderconfig.cpp  renderconfig.h  renderengine.h  renderthread.cpp  renderthread.h  samplebuffer.h  sampler.h  scene.cpp  scene.h  slgcfg.h  slgscene.cpp  slgscene.h  smalllux.h  smallluxgpu.cpp  spd.cpp  spd.h  sppm.cpp  sppm.h  telnet.cpp  telnet.h  texmap.cpp  texmap.h  trianglemat.h  (+2 more)
samples/smallluxgpu2/: CMakeLists.txt  displayfunc.cpp  displayfunc.h  editaction.h  renderconfig.cpp  renderconfig.h  renderengine.cpp  renderengine.h  rendersession.cpp  rendersession.h  slgcfg.h  smalllux.h  smallluxgpu.cpp  telnet.cpp  telnet.h
samples/smallluxgpu3/: CMakeLists.txt  displayfunc.cpp  editaction.h  renderconfig.cpp  renderconfig.h  renderengine.cpp  renderengine.h  rendersession.cpp  rendersession.h  slg.h  slgcfg.h  slgcfg.h.in  slglibdemo.cpp  smallluxgpu.cpp  telnet.cpp  telnet.h
samples/smallluxgpu4/: CMakeLists.txt  displayfunc.cpp  displayfunc.h  editaction.h  renderconfig.cpp  renderconfig.h  renderengine.cpp  renderengine.h  rendersession.cpp  slglibdemo.cpp  smalllux.h  smallluxgpu.cpp  smallluxgpu.h  telnet.cpp  telnet.h
sdk/: CMakeLists.txt
src/: CMakeLists.txt  cfg.h.in
src/accelerators/: bvhaccel.cpp  mqbvhaccel.cpp  qbvhaccel.cpp
src/core/: context.cpp  dataset.cpp  device.cpp  epsilon.cpp  trianglemesh.cpp  virtualdevice.cpp
src/devices/: nativedevice.cpp  opencldevice.cpp  virtualdevice.cpp
src/idevices/: nativedevice.cpp  nativeidevice.cpp  opencldevice.cpp  openclidevice.cpp  virtualdevice.cpp  virtualidevice.cpp
src/kernels/: bsdf_funcs_kernel.cpp  bsdf_types_kernel.cpp  bsdffuncs_kernel.cpp  bsdftypes_kernel.cpp  bvh_kernel.cl  bvh_kernel.cpp  camera_funcs_kernel.cpp  camera_kernel.cpp  camera_types_kernel.cpp  cameratypes_kernel.cpp  epsilon_funcs_kernel.cpp  epsilon_types_kernel.cpp  epsilontypes_kernel.cpp  filter_funcs_kernel.cpp  filter_kernel.cpp  filter_types_kernel.cpp  filtertypes_kernel.cpp  frame_funcs_kernel.cpp  frame_types_kernel.cpp  framefuncs_kernel.cpp  frametypes_kernel.cpp  hitpoint_types_kernel.cpp  light_funcs_kernel.cpp  light_types_kernel.cpp  luxrays_types_kernel.cpp  mapping_funcs_kernel.cpp  mapping_types_kernel.cpp  material_funcs_kernel.cpp  material_types_kernel.cpp  matrix4x4_funcs_kernel.cpp  matrix4x4_types_kernel.cpp  matrix4x4types_kernel.cpp  mc_funcs_kernel.cpp  mcfuncs_kernel.cpp  mqbvh_kernel.cl  mqbvh_kernel.cpp  normal_types_kernel.cpp  pixel_addsamplebuffer_kernel.cl  pixel_addsamplebuffer_kernel.cpp  pixel_addsamplebuffergaussian2x2_kernel.cl  (+42 more)
src/luxcore/: CMakeLists.txt  kernelcachefill.cpp  luxcore.cpp  luxcoreimpl.cpp  luxcoreinit.cpp  pyluxcore.cpp  pyluxcoreforblender.cpp  unexported_symbols.map
src/luxrays/: CMakeLists.txt
src/pdevices/: nativedevice.cpp  nativepdevice.cpp  opencldevice.cpp  openclpdevice.cpp
src/pyluxcore/: CMakeLists.txt
src/pyluxcoretools/: CMakeLists.txt
src/slg/: CMakeLists.txt  renderconfig.cpp  renderengine.cpp  rendersession.cpp  renderstate.cpp  slg.cpp
src/utils/: properties.cpp
tests/luxcoreimplserializationdemo/: CMakeLists.txt  luxcoreimplserializationdemo.cpp
ui/luxrender2/: CMakeLists.txt  aboutdialog.cpp  advancedinfo.ui  advancedinfowidget.cpp  advancedinfowidget.hxx  batchprocessdialog.cpp  batchprocessdialog.hxx  batchprocessdialog.ui  colorspace.ui  colorspacewidget.cpp  colorspacewidget.hxx  gammawidget.cpp  gammawidget.hxx  guiutil.cpp  guiutil.h  histogramview.cpp  histogramview.hxx  histogramwidget.cpp  images.qrc  lenseffectswidget.cpp  lenseffectswidget.hxx  lightgroupwidget.cpp  lightgroupwidget.hxx  luxapp.cpp  luxapp.hxx  luxcorePlaceholder.cpp  luxcorePlaceholder.h  macosx_bundle.cmake  main.cpp  mainwindow.cpp  moc_aboutdialog.cxx_parameters  moc_advancedinfowidget.cxx_parameters  moc_batchprocessdialog.cxx_parameters  moc_luxapp.cxx_parameters  (+27 more)
(+2769 files in other folders)
